# cround

./: .gitignore  CMakeLists.txt  README.md  bead.c  bead.h  bead_image.h  bracelet.c  bracelet.h  circle_menu.cpp  circle_menu.h  circle_menu_cpp.hpp  circle_menu_impl.hpp  clay_renderer_raylib.c  main.c  roadmap.md  surreal_client.c  surreal_client.h
src/: App.svelte  BeadPalette.svelte  BraceletMaker.svelte
